Alignment classes fix

--- a/core/brigrid/grid-classes/_grid-column-classes.scss
+++ b/core/brigrid/grid-classes/_grid-column-classes.scss
@@ -17,7 +17,7 @@
     $default-options: $grid-classes-default-options;
     $prefix: get-map-value('prefix', $options, $default-options);
     $names-delimiter: get-map-value('names-delimiter', $options, $default-options);
-    $media-delimiter: get-map-value('media-delimiter', $options, $default-options);
+    $breakpoint-delimiter: get-map-value('breakpoint-delimiter', $options, $default-options);
     $components: get-map-value('components', $options);
     $columns: get-grid-value('columns', $grid);
 
@@ -47,7 +47,7 @@
         @include grid-media($grid: $grid) {
             @for $i from 1 through $columns {
                 $class-name: list-to-string(($prefix, $column-name, $i), $names-delimiter)
-                             + $media-delimiter
+                             + $breakpoint-delimiter
                              + $_grid-media-bp-name;
                 .#{$class-name} {
                     @include grid-column-width(
@@ -56,10 +56,10 @@
                     );
                 }
             }
-            .hidden#{$media-delimiter}#{$_grid-media-bp-name} {
+            .hidden#{$breakpoint-delimiter}#{$_grid-media-bp-name} {
                 display: none;
             }
-            .visible#{$media-delimiter}#{$_grid-media-bp-name} {
+            .visible#{$breakpoint-delimiter}#{$_grid-media-bp-name} {
                 display: block;
             }
         }
@@ -71,7 +71,7 @@
     $prefix: get-map-value('prefix', $options, $default-options);
     $names-delimiter: get-map-value('names-delimiter', $options, $default-options);
     $modifier-delimiter: get-map-value('modifier-delimiter', $options, $default-options);
-    $media-delimiter: get-map-value('media-delimiter', $options, $default-options);
+    $breakpoint-delimiter: get-map-value('breakpoint-delimiter', $options, $default-options);
     $components: get-map-value('components', $options);
 
     $default-names: get-map-value('names', $default-options);
@@ -97,7 +97,7 @@
             @for $i from -1 through $columns {
                 $modifier-name: list-to-string(($order-name, $i), $names-delimiter);
                 $class-name: list-to-string(($base-name, $modifier-name), $modifier-delimiter)
-                       + $media-delimiter
+                       + $breakpoint-delimiter
                        + $_grid-media-bp-name;
                 .#{$class-name} {
                     @include grid-column-order(
@@ -115,7 +115,7 @@
     $prefix: get-map-value('prefix', $options, $default-options);
     $names-delimiter: get-map-value('names-delimiter', $options, $default-options);
     $modifier-delimiter: get-map-value('modifier-delimiter', $options, $default-options);
-    $media-delimiter: get-map-value('media-delimiter', $options, $default-options);
+    $breakpoint-delimiter: get-map-value('breakpoint-delimiter', $options, $default-options);
     $components: get-map-value('components', $options);
 
     $default-names: get-map-value('names', $default-options);
@@ -125,13 +125,14 @@
 
     $base-name: list-to-string(($prefix, $column-name), $names-delimiter);
 
-    $h-align-name: get-map-value('horizontal-alignment', $names, $default-names);
-    $h-alignments: map-values(map-merge(
+    $h-align-prefix: get-map-value('horizontal-alignment', $names, $default-names);
+    $h-alignments: map-merge(
         get-map-value('horizontal-alignments', $default-names),
         get-map-value('horizontal-alignments', $names, $default-names)
-    ));
-    @each $h-align in ($h-alignments) {
-        $modifier-name: list-to-string(($h-align-name, $h-align), $names-delimiter);
+    );
+
+    @each $h-align, $h-align-name in $h-alignments {
+        $modifier-name: list-to-string(($h-align-prefix, $h-align-name), $names-delimiter);
         $class-name: list-to-string(($base-name, $modifier-name), $modifier-delimiter);
         .#{$class-name} {
             @include grid-column-align(
@@ -141,13 +142,14 @@
         }
     }
 
-    $v-align-name: get-map-value('vertical-alignment', $names, $default-names);
-    $v-alignments: map-values(map-merge(
+    $v-align-prefix: get-map-value('vertical-alignment', $names, $default-names);
+    $v-alignments: map-merge(
         get-map-value('vertical-alignments', $default-names),
         get-map-value('vertical-alignments', $names, $default-names)
-    ));
-    @each $v-align in $v-alignments {
-        $modifier-name: list-to-string(($v-align-name, $v-align), $names-delimiter);
+    );
+
+    @each $v-align, $v-align-name in $v-alignments {
+        $modifier-name: list-to-string(($v-align-prefix, $v-align-name), $names-delimiter);
         $class-name: list-to-string(($base-name, $modifier-name), $modifier-delimiter);
         .#{$class-name} {
             @include grid-column-align(
@@ -157,13 +159,14 @@
         }
     }
 
-    @if (index($components, 'column-alignment-media') != null) {
+    @if (index($components, 'container-alignment-media') != null) {
         @include grid-media($grid: $grid) {
-            @each $h-align in $h-alignments {
-                $modifier-name: list-to-string(($h-align-name, $h-align), $names-delimiter);
+            @each $h-align, $h-align-name in $h-alignments {
+                $modifier-name: list-to-string(($h-align-prefix, $h-align-name), $names-delimiter);
                 $class-name: list-to-string(($base-name, $modifier-name), $modifier-delimiter)
-                       + $media-delimiter
-                       + $_grid-media-bp-name;
+                            + $breakpoint-delimiter
+                            + $_grid-media-bp-name;
+                            
                 .#{$class-name} {
                     @include grid-column-align(
                         $align-x: $h-align,
@@ -171,11 +174,13 @@
                     );
                 }
             }
-            @each $v-align in $v-alignments {
-                $modifier-name: list-to-string(($v-align-name, $v-align), $names-delimiter);
+
+            @each $v-align, $v-align-name in $v-alignments {
+                $modifier-name: list-to-string(($v-align-prefix, $v-align-name), $names-delimiter);
                 $class-name: list-to-string(($base-name, $modifier-name), $modifier-delimiter)
-                       + $media-delimiter
-                       + $_grid-media-bp-name;
+                            + $breakpoint-delimiter
+                            + $_grid-media-bp-name;
+
                 .#{$class-name} {
                     @include grid-column-align(
                         $align-y: $v-align,
